update address and videos

--- a/how-to-create-motiontill-liveview-package/index.html
+++ b/how-to-create-motiontill-liveview-package/index.html
@@ -20,7 +20,7 @@
     <div class="main-container">
         <div class="content">
             <section id="articles" class="" category="">
-                <div id="custom_fields" download_url="/files/motiontill-liveview.zip" video_url="/"></div>
+                <div id="custom_fields" download_url="/files/MLV-package-maker-export-comps-as-aep.zip" video_url="https://youtu.be/j5uJzlpVMoY"></div>
                 <img id="feature-image" src="/images/posts/Motiontill-Liveview-Picture.jpg" alt="">
                 <span id="excerept">how to create Package n exporting After Effects and Premiere Pro packages with
                     Motiontill LiveView </span>
