--- a/how-to-use-motiontill-liveview/index.html
+++ b/how-to-use-motiontill-liveview/index.html
@@ -20,7 +20,7 @@
     <div class="main-container">
         <div class="content">
             <section id="articles" category="">
-             <div id="custom_fields" download_url="/files/motiontill-liveview.zip" video_url="https://www.youtube.com/watch?v=T1dVysUVEa8"></div>
+             <div id="custom_fields" download_url="/files/motiontill-liveview.zip" video_url="https://youtu.be/2zFbUPhJWqg"></div>
              <img id="feature-image" src="/images/posts/how-to-use-motiontill-live-view-extension.jpg" alt="">
              <span id="excerept" >Easily use Motiontill LiveView and organize assets for Premiere Pro, After Effects, Illustrator, and Photoshop. Import files, create folders, add previews, and export packages with ease.</span>
            
