--- a/live-view/index.html
+++ b/live-view/index.html
@@ -20,7 +20,7 @@
     <div class="main-container">
         <div class="content">
             <section id="articles" class="" category="">
-                <div id="custom_fields" download_url="/files/motiontill-liveview.zip" video_url="/"></div>
+                <div id="custom_fields" download_url="/files/motiontill-liveview.zip" video_url="https://youtu.be/DLtj9U6x-Zg"></div>
                 <img id="feature-image" src="/images/posts/Motion-till-live-view-video-preview-5.jpg" alt="">
                 <span id="excerept">Motiontill Liveview Organize, preview, and publish assets for After Effects, Premiere Pro. Access free market items and boost project efficiency.</span>
 
