open-it image modal created

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </article>
                     </a><a href="/pages/export-comps-as-project-file-ae-file-script" class="category-item">
                         <article>
-                            <img src="/assets/images/posts/how-to-create-motiontill-liveview-package.png" alt="[[alt]]">
+                            <img src="/assets/images/posts/how-to-export-coomps-as-motiontill-live-view-extension.jpg" alt="[[alt]]">
                             <h2>Export Comps As Project Files</h2>
                             <blockquote>export all aftereffects comps to individual projects files ,with one click
                             </blockquote>
